womtool/src/test/resources/validate/wdl_draft2/invalid/missing_subworkflow_input/subworkflow.wdl
workflow subwf {
  Int i
  Int j
  Int k = 5
}
